feat: remove unnecessary properties

--- a/src/index.css
+++ b/src/index.css
@@ -86,11 +86,10 @@ body {
 
 .controls {
   box-sizing: border-box;
-  background-color: #101010;
   padding: 16px;
   width: 300px;
   flex: 0 0 auto;
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-y: auto;
   max-height: 100%;
 }
